@@ -1919,7 +1919,7 @@ rb_data_object_wrap(VALUE klass, void *datap, RUBY_DATA_FUNC dmark, RUBY_DATA_FU
 #undef rb_data_object_alloc
 RUBY_ALIAS_FUNCTION(rb_data_object_alloc(VALUE klass, void *datap,
 					 RUBY_DATA_FUNC dmark, RUBY_DATA_FUNC dfree),
-		    rb_data_object_wrap, (klass, datap, dmark, dfree));
+		    rb_data_object_wrap, (klass, datap, dmark, dfree))
 
 
 VALUE
@@ -1940,7 +1940,7 @@ rb_data_typed_object_wrap(VALUE klass, void *datap, const rb_data_type_t *type)
 #undef rb_data_typed_object_alloc
 RUBY_ALIAS_FUNCTION(rb_data_typed_object_alloc(VALUE klass, void *datap,
 					       const rb_data_type_t *type),
-		    rb_data_typed_object_wrap, (klass, datap, type));
+		    rb_data_typed_object_wrap, (klass, datap, type))
 
 VALUE
 rb_data_typed_object_zalloc(VALUE klass, size_t size, const rb_data_type_t *type)
